# context-foundation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Important thing to make Claude Code work at Scale.md  README.md  WHY_CLAUDE_CODE.md  pyproject.toml
TAM/: README.md
agents/: README.md  agent-provider.md  provider.md
app/: RAILWAY.md  README.md  __init__.py  action_runner.py  agent_cli.py  agent_executor.py  ai_classifier.py  claude_agent_sdk_runner.py  commands.example.json  config.example.json  config.py  cron_call_http.py  cron_enqueue.py  db.py  detect_provider.py  http_server.py  llm_runner.py  logger.py  mapper.py  mapping_cli.py  processor.py  railway_service.py  rule_eval.py  settings.py  webhook_server.py  webhook_utils.py  worker.py
companies/: README.md  page-scrape-run-summary_2025-12-14T183709Z.json  page-scrape-run-summary_2025-12-14T184035Z.json  site-map-run-summary_2025-12-14T175907Z.json  site-map-run-summary_2025-12-14T175948Z.json  site-map-run-summary_2025-12-14T180458Z.json
company/: README.md  pixis-ai.md
content-production/: README.md
crm/: README.md  companies.md  deals.md
dashboards/: README.md
docs/: async-agent-questions.md
icp/: README.md  company-info-template.md  personas.md
integration/: README-competitive-research.md  company-scrape-url.py  company-site-map.py  convert-research-outputs.py  download_fireflies_transcript.py  findall_web_research.py  openai-deep-research.py  research-competitor.py
intelligence/: README.md
outreach/: README.md
playbooks/: README.md
research-outputs/: nvidia-latest-chip-2026.md  (+2 more)
(+70 files in other folders)
