[project]
name = "context-foundation"
version = "0.0.0"
description = "Scripts for GTM context workflows."
requires-python = ">=3.13"
dependencies = [
    "datagen-python-sdk",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
datagen-python-sdk = { git = "https://github.com/datagendev/datagen-python-sdk.git" }

