[project]
name = "context-foundation"
version = "0.0.0"
description = "Scripts for GTM context workflows."
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "datagen-python-sdk",
    "fastapi>=0.115.0",
    "openai>=1.40.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
datagen-python-sdk = { git = "https://github.com/datagendev/datagen-python-sdk.git" }
